--- a/Backend/views/common/home.ejs
+++ b/Backend/views/common/home.ejs
@@ -21,7 +21,7 @@
           />
         </a>
         <div class="concert-details">
-          <a href="/concert/<%= concert._id %>"
+          <a href="/concert/<%= concert._id %>" class="truncate-title"
             ><h2><%= concert.title %></h2></a
           >
           <a href="/concert/band/<%= concert.band._id %>"
