--- a/Frontend/src/styles/teststyle.css
+++ b/Frontend/src/styles/teststyle.css
@@ -877,7 +877,7 @@ nav ul li a:hover::after {
 }
 
 .modal {
-  display: none; /* Hidden by default */
+  display: block;
   position: fixed;
   z-index: 2000;
   left: 0;
@@ -2268,7 +2268,18 @@ button.submit-btn:hover {
 
 /*user profile section */
 /* Profile Card Styles */
+
+.profile-layout {
+  display: flex;
+  align-items: flex-start;
+  width: 100%;
+  min-height: 100vh;
+  background-color: #0a0a0a;
+}
+
 .profile-card {
+  flex: 1;
+
   background: #1a1a1a;
   border-radius: 20px;
   padding: 2rem;
