--- a/Frontend/src/styles/commonstyles.css
+++ b/Frontend/src/styles/commonstyles.css
@@ -87,6 +87,7 @@ h6 {
   min-height: 100vh;
   margin-top: 60px; /* Adjusted to prevent overlap with fixed header */
 }
+
 .innercontainer {
   display: flex;
 
@@ -909,6 +910,74 @@ nav ul li a:hover::after {
   height: 35px;
   border-radius: 6px;
   border: 1px solid #ccc;
+}
+.btn-row {
+  display: flex;
+  justify-content: space-between;
+}
+#artistInputs {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  margin-top: 20px;
+}
+.artistGroup {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  padding: 15px;
+  border: 1px dashed #978f8f;
+  border-radius: 8px;
+  background-color: #fafafa;
+  position: relative;
+}
+
+/* Dynamic Buttons */
+button.add-btn {
+  background-color: #9c9c9c;
+  color: #333;
+  border: 1px solid #ccc;
+  padding: 10px 14px;
+  border-radius: 6px;
+  cursor: pointer;
+  margin-top: 10px;
+  font-weight: 600;
+  transition: all 0.3s ease;
+}
+
+button.add-btn:hover {
+  background-color: #807f7f;
+}
+
+button.submit-btn {
+  margin-top: 20px;
+  padding: 10px 14px;
+  background-color: #ff4754;
+  color: #fff;
+  border: none;
+  border-radius: 6px;
+  font-weight: 500;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+button.submit-btn:hover {
+  background-color: #f70a1a;
+}
+.remove-btn {
+  background-color: transparent;
+  color: #e20918;
+  border: none;
+  font-size: 33px;
+  font-weight: 600;
+  position: absolute;
+  top: -8px;
+  right: 0px;
+  cursor: pointer;
+}
+
+.remove-btn:hover {
+  color: #c0392b;
 }
 
 /* Concert details*/
@@ -1990,6 +2059,288 @@ iframe {
   cursor: pointer;
   transition: background-color 0.2s ease;
 }
+
+/* admin */
+/* dashboard */
+.dash-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #fff;
+  text-align: center;
+}
+.admin-details {
+  display: flex;
+  flex-direction: column;
+  text-align: start;
+}
+.admin-details h2 {
+  font-size: 1.4rem;
+  color: #fff;
+  margin-bottom: 10px;
+}
+.admin-details p {
+  font-size: 1.3rem;
+  color: #999;
+  margin-bottom: 10px;
+}
+
+.admin-top {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+}
+
+.admin-top h1 {
+  font-size: 2rem;
+  color: #999;
+  text-align: start;
+  margin-bottom: 0;
+}
+.summary-card {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 1300px;
+  margin: 40px auto;
+}
+
+.card {
+  flex: 1 1 calc(25% - 20px);
+  min-width: 250px;
+  padding: 20px;
+  border-radius: 12px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  background-color: #2a2a2a;
+  transition: transform 0.3s ease;
+}
+
+.card:hover {
+  transform: translateY(-5px);
+}
+
+.card h3 {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-size: 1.3rem;
+  font-weight: 600;
+  color: #fff;
+  margin: 0;
+}
+
+.card span {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 40px;
+  width: 40px;
+  background-color: #0a0a0a;
+  border-radius: 50%;
+  color: #fff;
+  font-size: 1.1rem;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+}
+
+.card span i {
+  font-size: 1rem;
+}
+
+.card p {
+  font-size: 1.3rem;
+  font-weight: 700;
+  margin: 0;
+  color: #cfcfcf;
+}
+.card p i {
+  margin-right: 5px;
+  font-size: 1.1rem;
+}
+.recentandquick {
+  display: flex;
+  justify-content: space-between;
+  gap: 30px;
+  max-width: 1300px;
+  width: 100%;
+  margin-top: 40px;
+}
+
+/* RECENT ACTIVITY */
+.recentactivity {
+  width: 50%;
+  background-color: #1e1e1e;
+  border-radius: 15px;
+  padding: 20px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.recentactivity h2 {
+  font-size: 1.8rem;
+  color: #e94b4b;
+  margin-bottom: 10px;
+}
+
+.recentactivity .activity {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  padding: 12px;
+  border-radius: 10px;
+  background-color: #2a2a2a;
+  color: #ccc;
+  font-size: 1rem;
+}
+
+.activity .icon {
+  height: 35px;
+  width: 35px;
+  background-color: #444;
+  color: #fff;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1rem;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+}
+
+/* QUICK ACCESS */
+.quickaccess {
+  width: 50%;
+  background-color: #1e1e1e;
+  border-radius: 15px;
+  padding: 20px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  max-height: max-content;
+  height: 100%;
+}
+
+.quickaccess h2 {
+  font-size: 1.8rem;
+  font-weight: 600;
+  color: #e94b4b;
+  margin-bottom: 10px;
+}
+
+.quickaccess .quickbtn {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 12px;
+}
+
+.quickaccess .quickbtn a {
+  padding: 12px 18px;
+  background-color: #2a2a2a;
+  color: #fff;
+  border-radius: 10px;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 0.95rem;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+}
+
+.quickaccess .quickbtn a:hover {
+  background-color: #3a3a3a;
+  transform: translateY(-2px);
+}
+
+.quickaccess .quickbtn a i {
+  font-size: 1rem;
+}
+.recent-top {
+  display: flex;
+  justify-content: space-between;
+  max-width: 1300px;
+  width: 100%;
+  margin-top: 40px;
+}
+.recent-top span {
+  margin-right: 10px;
+}
+
+/* table style */
+.managementstable {
+  width: 100%;
+  max-width: 1300px;
+  margin-top: 10px;
+}
+.managementstable table {
+  width: 100%;
+  border-collapse: collapse;
+}
+.managementstable table th,
+.managementstable table td {
+  padding: 9px 12px;
+
+  text-align: center;
+  border-bottom: 1px solid #ddd;
+}
+.managementstable table img {
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+}
+.managementstable table th {
+  background-color: #222;
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+.managementstable tr {
+  background-color: #333;
+  transition: background-color ease-out 0.5s;
+}
+.managementstable tr:hover {
+  background-color: #444;
+}
+.managementstable .edit {
+  cursor: pointer;
+  color: #00ff00;
+  border: none;
+  background-color: transparent;
+  font-size: 1.2rem;
+}
+.managementstable .delete {
+  cursor: pointer;
+  color: #ff0000;
+  border: none;
+  background-color: transparent;
+  font-size: 1.2rem;
+}
+.Manage-top {
+  display: flex;
+  justify-content: space-between;
+  gap: 30px;
+  max-width: 1300px;
+  width: 100%;
+  margin-top: 10px;
+}
+.Manage-top a {
+  padding: 12px 20px;
+  background-color: #2a2a2a;
+  border-radius: 10px;
+  color: #fff;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 1rem;
+  align-self: center;
+}
+
 /* ------ responsive ----------- */
 @media (max-width: 768px) {
   h1 {
